# csc299-project

./: SUMMARY.md  video.txt
OneDrive - DePaul University/299Project/tasks2/data/: example_tasks.json
finalproject/: .gitignore  README.md  main.py  pyproject.toml  task_manager.py
finalproject/.specify/memory/: constitution.md
finalproject/.specify/specs/: agent-file.md  checklist.md  plan.md  spec.md  tasks.md
finalproject/tests/: __init__.py  test_ai.py  test_manager.py  test_storage.py
task-manager/: README.md
task-manager/src/: main.py
tasks3/: .gitignore  README.md  pyproject.toml
tasks3/src/tasks3/: README.md  main.py
tasks3/src/tasks3/data/: .gitignore
tasks3/tests/: test_inc.py  test_main3.py
tasks4/: .gitignore  README.md  main.py  pyproject.toml
tasks5/: README.md
tasks5/.specify/memory/: constitution.md
tasks5/.specify/specs/: agent-file.md  checklist.md  plan.md  spec.md  tasks.md
tasks5/data/: .gitignore
tasks5/src/: task_manager.py
